--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-  width: 80vw;
+  width: 60vw;
   margin: 0 auto;
   padding-top: 200px;
 }
@@ -24,10 +24,27 @@ body {
   overflow-x: scroll;
 }
 
+.card:nth-child(2) {
+  margin: 0 30px;
+}
+
 .card {
-  height: 400px;
   min-width: 300px;
-  padding: 10px;
-  margin-right: 10px;
+  padding: 30px;
+  /* margin: 0 20px; */
   background-color: #fff;
+  border-radius: 3px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.card > p {
+  margin-bottom: 0;
+}
+
+.card > h2 {
+  font-weight: bold;
+}
+
+.card > h4 {
+  font-weight: lighter;
 }
