--- a/index.css
+++ b/index.css
@@ -30,15 +30,44 @@ body {
 
 .card {
   min-width: 300px;
-  padding: 30px;
+  padding: 50px;
   background-color: #fff;
   border-radius: 3px;
   opacity: 0;
   transition: opacity 0.7s ease-in-out;
+  position: absolute;
+  left: -100%;
+}
+
+@keyframes slidein {
+  from {
+    transform: translateX(150px);
+  }
+
+  to {
+    transform: translateX(0);
+  }
 }
 
 .card.active {
   opacity: 1;
+  animation: slidein 0.6s ease-out;
+  position: static;
+}
+
+@keyframes slideout {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-150px);
+  }
+}
+
+.card.not-active {
+  opacity: 0;
+  animation: slideout 0.6s ease-in;
 }
 
 .card > p {
